Bug fix - link to section, header goes out of view

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -178,6 +178,27 @@ body {
   }
 }
 
+/*
+.breadcrumb {
+  list-style: none;
+  overflow: hidden;
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  li {
+    float: left;
+
+    a {
+      padding: 10px 0 10px 65px;
+      position: relative;
+      display: block;
+      float: left;
+    }
+  }
+}
+*/
+
 .openapi-frame {
   width: 100%;
   height: 100vh;
